[gd_scene load_steps=7 format=3 uid="uid://dvwh4xv2jlwcr"]

[ext_resource type="Script" uid="uid://bbibfx436rdcs" path="res://Scripts/task_panel.gd" id="1_wxn36"]
[ext_resource type="Texture2D" uid="uid://c4abufwnp6751" path="res://art/background_down.png" id="2_wxn36"]
[ext_resource type="Texture2D" uid="uid://y58vd15d5pxo" path="res://art/checkmark.png" id="3_w37is"]
[ext_resource type="FontFile" uid="uid://c1mfdxxdb5giw" path="res://fonts/Basal.ttf" id="3_wxn36"]
[ext_resource type="Texture2D" uid="uid://pam222a32u8r" path="res://art/checkmark_complete.png" id="4_2fsol"]
[ext_resource type="Texture2D" uid="uid://pmbfua56bn8s" path="res://art/trashcan.png" id="6_w37is"]

[node name="task_panel" type="Panel" unique_id=260420109]
custom_minimum_size = Vector2(128, 40)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wxn36")

[node name="NinePatchRect" type="NinePatchRect" parent="." unique_id=1929929355]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wxn36")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=99729861]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -16.0
offset_right = 168.0
offset_bottom = 16.0
grow_vertical = 2
localize_numeral_system = false

[node name="task_name_label" type="RichTextLabel" parent="HBoxContainer" unique_id=1874646125]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("3_wxn36")
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
text = "Task Name"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="checkmark_button" type="TextureButton" parent="HBoxContainer" unique_id=310077640]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("3_w37is")
texture_pressed = ExtResource("4_2fsol")

[node name="trashcan_button" type="TextureButton" parent="HBoxContainer" unique_id=404631129]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("6_w37is")

[connection signal="pressed" from="HBoxContainer/checkmark_button" to="." method="_on_checkmark_button_pressed"]
[connection signal="pressed" from="HBoxContainer/trashcan_button" to="." method="_on_trashcan_button_pressed"]
